--- a/css/alex.css
+++ b/css/alex.css
@@ -1,3 +1,12 @@
 .fourfivesix{
   font-size: 20pt;
 }
+#myLanguagesLightbox{
+  font-size: 20pt;
+}
+#myCountriesLightbox{
+  font-size: 20pt;
+}
+#myYearsLightbox{
+  font-size: 20pt;
+}
